--- a/src/app/products/manage-tax-components/view-tax-component/view-tax-component.component.html
+++ b/src/app/products/manage-tax-components/view-tax-component/view-tax-component.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="end" fxLayoutGap="2%">
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_TAXCOMPONENT'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
 </div>
 
@@ -14,7 +14,7 @@
       <div fxLayout="row wrap" class="content">
 
         <div fxFlex="50%" class="mat-body-strong">
-          Name
+          {{'Product_Component.ManageTax.View.Name'| translate}}
         </div>
 
         <div fxFlex="50%">
@@ -22,7 +22,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Percentage
+          {{'Product_Component.ManageTax.View.Percentage'| translate}}
         </div>
 
         <div fxFlex="50%">
@@ -30,7 +30,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="taxComponentData.debitAccountType">
-          Debit Account Type
+          {{'Product_Component.ManageTax.View.debitAccountType'| translate}}
         </div>
 
         <div fxFlex="50%" *ngIf="taxComponentData.debitAccountType">
@@ -38,7 +38,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="taxComponentData.debitAccount">
-          Debit Account
+          {{'Product_Component.ManageTax.View.debitAccount'| translate}}
         </div>
 
         <div fxFlex="50%" *ngIf="taxComponentData.debitAccount">
@@ -46,7 +46,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="taxComponentData.creditAccountType">
-          Credit Account Type
+          {{'Product_Component.ManageTax.View.creditAccountType'| translate}}
         </div>
 
         <div fxFlex="50%" *ngIf="taxComponentData.creditAccountType">
@@ -54,7 +54,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="taxComponentData.creditAccount">
-          Credit Account
+          {{'Product_Component.ManageTax.View.creditAccount'| translate}}
         </div>
 
         <div fxFlex="50%" *ngIf="taxComponentData.creditAccount">
@@ -62,7 +62,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Start date
+          {{'Product_Component.ManageTax.View.startDate'| translate}}
         </div>
 
         <div fxFlex="50%">
