--- a/src/app/products/manage-tax-configurations/manage-tax-configurations.component.html
+++ b/src/app/products/manage-tax-configurations/manage-tax-configurations.component.html
@@ -12,8 +12,8 @@
             <mat-icon matListIcon>
               <fa-icon icon="building" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Tax Components</h4>
-            <p matLine>Define Tax components</p>
+            <h4 matLine>{{'Product_Component.ManageTaxConfigurations.ManageTaxComponents'| translate}}</h4>
+            <p matLine>{{'Product_Component.ManageTaxConfigurations.DefineTaxcomponents'| translate}}</p>
           </mat-list-item>
 
         </mat-nav-list>
@@ -28,8 +28,8 @@
             <mat-icon matListIcon>
               <fa-icon icon="building" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Tax Groups</h4>
-            <p matLine>Define Tax Groups</p>
+            <h4 matLine>{{'Product_Component.ManageTaxConfigurations.ManageTaxGroups'| translate}}</h4>
+            <p matLine>{{'Product_Component.ManageTaxConfigurations.DefineTaxGroups'| translate}}</p>
           </mat-list-item>
 
         </mat-nav-list>
