--- a/src/app/products/recurring-deposit-products/create-recurring-deposit-product/create-recurring-deposit-product.component.html
+++ b/src/app/products/recurring-deposit-products/create-recurring-deposit-product/create-recurring-deposit-product.component.html
@@ -24,7 +24,7 @@
 
     <mat-step [stepControl]="recurringDepositProductDetailsForm">
 
-      <ng-template matStepLabel>DETAILS</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.DETAILS'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-details-step></mifosx-recurring-deposit-product-details-step>
 
@@ -32,7 +32,7 @@
 
     <mat-step [stepControl]="recurringDepositProductCurrencyForm">
 
-      <ng-template matStepLabel>CURRENCY</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.CURRENCY'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-currency-step
         [recurringDepositProductsTemplate]="recurringDepositProductsTemplate">
@@ -42,7 +42,7 @@
 
     <mat-step [stepControl]="recurringDepositProductTermsForm">
 
-      <ng-template matStepLabel>TERMS</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.TERMS'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-terms-step
         [recurringDepositProductsTemplate]="recurringDepositProductsTemplate">
@@ -52,7 +52,7 @@
 
     <mat-step [stepControl]="recurringDepositProductSettingsForm">
 
-      <ng-template matStepLabel>SETTINGS</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.SETTINGS'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-settings-step
         [recurringDepositProductsTemplate]="recurringDepositProductsTemplate">
@@ -62,7 +62,7 @@
 
     <mat-step [stepControl]="recurringDepositProductInterestRateChartForm">
 
-      <ng-template matStepLabel>INTEREST RATE CHART</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.INTERESTRATECHART'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-interest-rate-chart-step
         [recurringDepositProductsTemplate]="recurringDepositProductsTemplate">
@@ -72,7 +72,7 @@
 
     <mat-step>
 
-      <ng-template matStepLabel>CHARGES</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.CHARGES'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-charges-step
         [recurringDepositProductsTemplate]="recurringDepositProductsTemplate"
@@ -83,7 +83,7 @@
 
     <mat-step [stepControl]="recurringDepositProductAccountingForm">
 
-      <ng-template matStepLabel>ACCOUNTING</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.ACCOUNTING'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-accounting-step
         [recurringDepositProductsTemplate]="recurringDepositProductsTemplate" [accountingRuleData]="accountingRuleData"
@@ -94,7 +94,7 @@
 
     <mat-step state="preview" *ngIf="recurringDepositProductFormValid" completed>
 
-      <ng-template matStepLabel>PREVIEW</ng-template>
+      <ng-template matStepLabel>{{'Product_Component.RecuringDeposit.Create.PREVIEW'| translate}}</ng-template>
 
       <mifosx-recurring-deposit-product-preview-step
         [recurringDepositProductsTemplate]="recurringDepositProductsTemplate"
