--- a/src/app/products/charges/charges.component.html
+++ b/src/app/products/charges/charges.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_CHARGE'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Charge
+    {{'Product_Component.ChargesComponent.btnCreateCharge'| translate}}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Product_Component.ChargesComponent.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,17 +19,17 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ChargesComponent.Name'| translate}} </th>
         <td mat-cell *matCellDef="let charge"> {{ charge.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="chargeAppliesTo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Charge Applies To </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ChargesComponent.chargeAppliesTo'| translate}} </th>
         <td mat-cell *matCellDef="let charge"> {{ charge.chargeAppliesTo.value }} </td>
       </ng-container>
 
       <ng-container matColumnDef="penalty">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Penalty? </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ChargesComponent.penalty'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
             <fa-icon *ngIf="charge.penalty" icon="check-circle" size="lg" class="ispenalty" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
             <fa-icon *ngIf="!charge.penalty" icon="times-circle" size="lg" class="nopenalty" matTooltip="No" matTooltipPosition="right"></fa-icon>
@@ -37,7 +37,7 @@
       </ng-container>
 
       <ng-container matColumnDef="active">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ChargesComponent.Status'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
           <div [className]="charge.active === true ? 'true' : 'false'">
             <fa-icon matTooltip="{{ charge.active === true ? 'Active' : 'Inactive' }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
