--- a/src/app/products/deposit-product-incentive-form-dialog/deposit-product-incentive-form-dialog.component.html
+++ b/src/app/products/deposit-product-incentive-form-dialog/deposit-product-incentive-form-dialog.component.html
@@ -3,31 +3,31 @@
 <div mat-dialog-content [formGroup]="depositProductIncentiveForm" fxLayout="column">
 
   <mat-form-field>
-    <mat-label>Attribute</mat-label>
+    <mat-label>{{'Product_Component.DepositProductIncentiveForm.Attribute'| translate}}</mat-label>
     <mat-select formControlName="attributeName" required>
       <mat-option *ngFor="let attributeName of attributeNameData" [value]="attributeName.id">
         {{ attributeName.value }}
       </mat-option>
     </mat-select>
     <mat-error>
-      Attribute is <strong>required</strong>
+      {{'Product_Component.DepositProductIncentiveForm.errAttribute'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Condition</mat-label>
+    <mat-label>{{'Product_Component.DepositProductIncentiveForm.Condition'| translate}}</mat-label>
     <mat-select formControlName="conditionType" required>
       <mat-option *ngFor="let conditionType of conditionTypeData" [value]="conditionType.id">
         {{ conditionType.value }}
       </mat-option>
     </mat-select>
     <mat-error>
-      Condition is <strong>required</strong>
+      {{'Product_Component.DepositProductIncentiveForm.errCondition'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
   <mat-form-field *ngIf="depositProductIncentiveForm.value.attributeName">
-    <mat-label>Value</mat-label>
+    <mat-label>{{'Product_Component.DepositProductIncentiveForm.Value'| translate}}</mat-label>
     <mat-select formControlName="attributeValue" *ngIf="depositProductIncentiveForm.value.attributeName !== 3" required>
       <mat-option *ngFor="let attributeValue of attributeValueData" [value]="attributeValue.id">
         {{ attributeValue.name }}
@@ -35,33 +35,33 @@
     </mat-select>
     <input type="number" matInput formControlName="attributeValue" *ngIf="depositProductIncentiveForm.value.attributeName === 3" required>
     <mat-error>
-      Value is <strong>required</strong>
+      {{'Product_Component.DepositProductIncentiveForm.errValue'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Type</mat-label>
+    <mat-label>{{'Product_Component.DepositProductIncentiveForm.Type'| translate}}</mat-label>
     <mat-select formControlName="incentiveType" required>
       <mat-option *ngFor="let incentiveType of incentiveTypeData" [value]="incentiveType.id">
         {{ incentiveType.value }}
       </mat-option>
     </mat-select>
     <mat-error>
-      Type is <strong>required</strong>
+      {{'Product_Component.DepositProductIncentiveForm.errType'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Interest</mat-label>
+    <mat-label>{{'Product_Component.DepositProductIncentiveForm.Interest'| translate}}</mat-label>
     <input type="number" matInput formControlName="amount" required>
     <mat-error>
-      Interest is <strong>required</strong>
+      {{'Product_Component.DepositProductIncentiveForm.errerrType'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
     </mat-error>
   </mat-form-field>
 
 </div>
 
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
-  <button mat-raised-button mat-dialog-close> Cancel </button>
+  <button mat-raised-button mat-dialog-close> {{ "ShareButton.CancelEng" | translate }} </button>
   <button mat-raised-button color="primary" [mat-dialog-close]="{ data: depositProductIncentiveForm }" [disabled]="!depositProductIncentiveForm.valid || depositProductIncentiveForm.pristine">{{ layout.addButtonText }}</button>
 </mat-dialog-actions>
