--- a/src/app/products/floating-rates/create-floating-rate/create-floating-rate.component.html
+++ b/src/app/products/floating-rates/create-floating-rate/create-floating-rate.component.html
@@ -9,20 +9,20 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="4%">
 
           <mat-form-field fxFlex="30%">
-            <mat-label>Floating Rate Name</mat-label>
+            <mat-label>{{'Product_Component.FloatingRates.Create.name'| translate}}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="floatingRateForm.controls.name.hasError('required')">
-              Floating Rate Name is <strong>required</strong>
+              {{'Product_Component.FloatingRates.Create.errname'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div class="checkbox-wrapper" fxFlex="30%">
-            <mat-checkbox formControlName="isBaseLendingRate" class="checkbox" labelPosition="before">Is Base Lending
-              Rate?</mat-checkbox>
+            <mat-checkbox formControlName="isBaseLendingRate" class="checkbox" labelPosition="before">{{'Product_Component.FloatingRates.Create.isBaseLendingRate'| translate}}
+              {{'Product_Component.FloatingRates.Create.Rate'| translate}}</mat-checkbox>
           </div>
 
           <div class="checkbox-wrapper" fxFlex="30%">
-            <mat-checkbox formControlName="isActive" class="checkbox" labelPosition="before">Active</mat-checkbox>
+            <mat-checkbox formControlName="isActive" class="checkbox" labelPosition="before">{{'Product_Component.FloatingRates.Create.Active'| translate}}</mat-checkbox>
           </div>
 
         </div>
@@ -35,7 +35,7 @@
 
         <div fxLayout="row wrap" fxLayoutGap="70%" fxLayoutGap.lt-md="0px" class="m-b-10" fxLayout.lt-md="column">
 
-          <p fxFlex="25%" class="mat-title">Floating Rate Periods</p>
+          <p fxFlex="25%" class="mat-title">{{'Product_Component.FloatingRates.Create.FloatingRatePeriods'| translate}}</p>
 
           <button mat-mini-fab type="button" color="primary" (click)="addFloatingRatePeriod()">
             <fa-icon icon="plus"></fa-icon>
@@ -46,17 +46,17 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="fromDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> From Date </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Create.fromDate'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRatePeriod"> {{ floatingRatePeriod.fromDate | date : 'dd/MM/yyyy' }} </td>
           </ng-container>
 
           <ng-container matColumnDef="interestRate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Interest Rate </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Create.interestRate'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRatePeriod"> {{ floatingRatePeriod.interestRate }} </td>
           </ng-container>
 
           <ng-container matColumnDef="isDifferential">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Differential? </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Create.isDifferential'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRate">
               <fa-icon *ngIf="floatingRate.isDifferentialToBaseLendingRate" icon="check-circle" size="lg"
                 class="is-differential" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
@@ -66,7 +66,7 @@
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Product_Component.FloatingRates.Create.Actions'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRatePeriod" fxLayoutGap="15%">
               <button type="button" fxFlex="8%" color="primary" mat-icon-button
                 (click)="editFloatingRatePeriod(floatingRatePeriod)">
@@ -89,8 +89,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button type="submit" color="primary" [disabled]="!floatingRateForm.valid" *midasHasPermission="'CREATE_FLOATINGRATE'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button type="submit" color="primary" [disabled]="!floatingRateForm.valid" *midasHasPermission="'CREATE_FLOATINGRATE'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
