--- a/src/app/products/floating-rates/edit-floating-rate/edit-floating-rate.component.html
+++ b/src/app/products/floating-rates/edit-floating-rate/edit-floating-rate.component.html
@@ -9,22 +9,22 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="15%">
 
           <mat-form-field fxFlex="25%">
-            <mat-label>Floating Rate Name</mat-label>
+            <mat-label>{{'Product_Component.FloatingRates.Edit.name'| translate}}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="floatingRateForm.controls.name.hasError('required')">
-              Floating Rate Name is <strong>required</strong>
+              {{'Product_Component.FloatingRates.Edit.errname'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div class="checkbox-wrapper" fxFlex="25%">
             <mat-checkbox formControlName="isBaseLendingRate" class="checkbox" labelPosition="before">
-              Is Base Lending Rate?
+              {{'Product_Component.FloatingRates.Edit.isBaseLendingRate'| translate}}
             </mat-checkbox>
           </div>
 
           <div class="checkbox-wrapper" fxFlex="15%">
             <mat-checkbox formControlName="isActive" class="checkbox" labelPosition="before">
-              Active
+              {{'Product_Component.FloatingRates.Edit.Active'| translate}}
             </mat-checkbox>
           </div>
 
@@ -38,7 +38,7 @@
 
         <div fxLayout="row wrap" fxLayoutGap="70%" fxLayoutGap.lt-md="0px" class="m-b-10" fxLayout.lt-md="column">
 
-          <p fxFlex="25%" class="mat-title">Floating Rate Periods</p>
+          <p fxFlex="25%" class="mat-title">{{'Product_Component.FloatingRates.Edit.FloatingRatePeriods'| translate}}</p>
 
           <button mat-mini-fab type="button" color="primary" (click)="addFloatingRatePeriod()">
             <fa-icon icon="plus"></fa-icon>
@@ -49,17 +49,17 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="fromDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> From Date </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Edit.fromDate'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRatePeriod"> {{ floatingRatePeriod.fromDate | date : 'dd/MM/yyyy' }} </td>
           </ng-container>
 
           <ng-container matColumnDef="interestRate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Interest Rate </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Edit.interestRate'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRatePeriod"> {{ floatingRatePeriod.interestRate }} </td>
           </ng-container>
 
           <ng-container matColumnDef="isDifferential">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Differential? </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Edit.isDifferential'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRate">
               <fa-icon *ngIf="floatingRate.isDifferentialToBaseLendingRate" icon="check-circle" size="lg"
                 class="is-differential" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
@@ -69,7 +69,7 @@
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Product_Component.FloatingRates.Edit.Actions'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRatePeriod">
               <button type="button" color="primary" mat-icon-button
                 (click)="editFloatingRatePeriod(floatingRatePeriod)">
@@ -92,9 +92,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button type="submit" color="primary" [disabled]="!floatingRateForm.valid || floatingRateForm.pristine && isFloatingRateFormPristine">
-          Submit
+          {{ "ShareButton.Submit" | translate }}
         </button>
       </mat-card-actions>
 
