--- a/src/app/products/floating-rates/floating-rate-period-dialog/floating-rate-period-dialog.component.html
+++ b/src/app/products/floating-rates/floating-rate-period-dialog/floating-rate-period-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Floating Rate Period</h1>
+<h1 mat-dialog-title>{{'Product_Component.FloatingRates.FloatingDialog.title'| translate}}</h1>
 
 <mat-dialog-content>
 
@@ -7,25 +7,25 @@
     <div fxLayout="column">
 
       <mat-form-field>
-        <mat-label>From Date</mat-label>
+        <mat-label>{{'Product_Component.FloatingRates.FloatingDialog.fromDate'| translate}}</mat-label>
         <input required matInput formControlName="fromDate" [min]="minDate" [matDatepicker]="fromDatePicker">
         <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #fromDatePicker></mat-datepicker>
         <mat-error *ngIf="floatingRatePeriodForm.controls.fromDate.hasError('required')">
-          From Date is <strong>required</strong>
+          {{'Product_Component.FloatingRates.FloatingDialog.errfromDate'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Interest Rate</mat-label>
+        <mat-label>{{'Product_Component.FloatingRates.FloatingDialog.interestRate'| translate}}</mat-label>
         <input matInput type="number" required formControlName="interestRate">
         <mat-error *ngIf="floatingRatePeriodForm.controls.interestRate.hasError('required')">
-          Interest Rate is <strong>required</strong>
+          {{'Product_Component.FloatingRates.FloatingDialog.errinterestRate'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-checkbox class="is-differential" formControlName="isDifferentialToBaseLendingRate" labelPosition="before">
-        Is Differential?
+        {{'Product_Component.FloatingRates.FloatingDialog.isDifferentialToBaseLendingRate'| translate}}
       </mat-checkbox>
 
     </div>
@@ -35,7 +35,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
   <button mat-raised-button color="primary"
-    [disabled]="!floatingRatePeriodForm.valid || floatingRatePeriodForm.pristine" (click)="submit()">Submit</button>
+    [disabled]="!floatingRatePeriodForm.valid || floatingRatePeriodForm.pristine" (click)="submit()">{{ "ShareButton.Submit" | translate }}</button>
 </mat-dialog-actions>
