--- a/src/app/products/floating-rates/floating-rates.component.html
+++ b/src/app/products/floating-rates/floating-rates.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_FLOATINGRATE'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Floating Rate
+    {{'Product_Component.FloatingRates.btnCreateFloatingRate'| translate}}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Product_Component.FloatingRates.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,28 +19,28 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Name'| translate}} </th>
         <td mat-cell *matCellDef="let floatingRate"> {{ floatingRate.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Created By </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.createdBy'| translate}} </th>
         <td mat-cell *matCellDef="let floatingRate"> {{ floatingRate.createdBy }} </td>
       </ng-container>
 
       <ng-container matColumnDef="isBaseLendingRate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Is base lending rate? </th>
-        <td mat-cell *matCellDef="let floatingRate"> 
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.btnCreateFloatingRate'| translate}} </th>
+        <td mat-cell *matCellDef="let floatingRate">
           <fa-icon *ngIf="floatingRate.isBaseLendingRate" icon="check-circle" size="lg" class="is-base-lending-rate-or-active" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
-          <fa-icon *ngIf="!floatingRate.isBaseLendingRate" icon="times-circle" size="lg" class="not-is-base-lending-rate-or-active" matTooltip="No" matTooltipPosition="right"></fa-icon> 
+          <fa-icon *ngIf="!floatingRate.isBaseLendingRate" icon="times-circle" size="lg" class="not-is-base-lending-rate-or-active" matTooltip="No" matTooltipPosition="right"></fa-icon>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="isActive">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
-          <td mat-cell *matCellDef="let floatingRate"> 
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.Active'| translate}} </th>
+          <td mat-cell *matCellDef="let floatingRate">
             <fa-icon *ngIf="floatingRate.isActive" icon="check-circle" size="lg" class="is-base-lending-rate-or-active" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
-            <fa-icon *ngIf="!floatingRate.isActive" icon="times-circle" size="lg" class="not-is-base-lending-rate-or-active" matTooltip="No" matTooltipPosition="right"></fa-icon> 
+            <fa-icon *ngIf="!floatingRate.isActive" icon="times-circle" size="lg" class="not-is-base-lending-rate-or-active" matTooltip="No" matTooltipPosition="right"></fa-icon>
           </td>
         </ng-container>
 
