--- a/src/app/products/floating-rates/view-floating-rate/view-floating-rate.component.html
+++ b/src/app/products/floating-rates/view-floating-rate/view-floating-rate.component.html
@@ -2,7 +2,7 @@
 
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_FLOATINGRATE'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
 
 </div>
@@ -16,7 +16,7 @@
       <div fxLayout="row wrap" class="content" fxLayout.lt-md="column">
 
         <div fxFlex="18%" class="mat-body-strong">
-          Floating Rate Name:
+          {{'Product_Component.FloatingRates.View.name'| translate}}
         </div>
 
         <div fxFlex="18%">
@@ -24,7 +24,7 @@
         </div>
 
         <div fxFlex="20%" class="mat-body-strong">
-          Is Base Lending Rate:
+          {{'Product_Component.FloatingRates.View.isBaseLendingRate'| translate}}
         </div>
 
         <div fxFlex="10%">
@@ -32,7 +32,7 @@
         </div>
 
         <div fxFlex="14%" class="mat-body-strong">
-          Is Active:
+          {{'Product_Component.FloatingRates.View.isActive'| translate}}
         </div>
 
         <div fxFlex="10%">
@@ -47,24 +47,24 @@
 
       <br>
 
-      <p class="mat-title">Floating Rate Periods</p>
+      <p class="mat-title">{{'Product_Component.FloatingRates.View.FloatingRatePeriods'| translate}}</p>
 
       <div class="mat-elevation-z8">
 
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="fromDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> From Date </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.View.fromDate'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRate"> {{ floatingRate.fromDate | date : 'dd/MM/yyyy' }} </td>
           </ng-container>
 
           <ng-container matColumnDef="interestRate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Interest Rate </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.View.interestRate'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRate"> {{ floatingRate.interestRate }} </td>
           </ng-container>
 
           <ng-container matColumnDef="isDifferential">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Differential? </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.FloatingRates.View.isDifferential'| translate}} </th>
             <td mat-cell *matCellDef="let floatingRate">
               <fa-icon *ngIf="floatingRate.isDifferentialToBaseLendingRate" icon="check-circle" size="lg"
                 class="is-differential" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
