--- a/src/app/products/loan-products/loan-product-stepper/loan-product-charges-step/loan-product-charges-step.component.html
+++ b/src/app/products/loan-products/loan-product-stepper/loan-product-charges-step/loan-product-charges-step.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Charge</mat-label>
+    <mat-label>{{'Product_Component.LoanProduct.LoanStepper.Charges.Charge'| translate}}</mat-label>
     <mat-select #charge>
       <mat-option *ngFor="let charge of chargeData | chargesFilter:chargesDataSource:currencyCode.value:multiDisburseLoan.value" [value]="charge">
         {{ charge.name }}
@@ -12,42 +12,42 @@
   <div fxFlex="48%" fxFlexAlign="center">
     <button type="button" mat-raised-button color="primary" (click)="addCharge(charge)" [disabled]="!charge.value">
       <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-      Add
+      {{'Product_Component.LoanProduct.LoanStepper.Charges.Add'| translate}}
     </button>
   </div>
 
   <table fxFlex="98%" class="mat-elevation-z1" mat-table [dataSource]="chargesDataSource | chargesPenaltyFilter:false" #chargesTable [hidden]="chargesTable.dataSource.length === 0">
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Name'| translate}} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.name + ', ' + charge.currency.displaySymbol }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="chargeCalculationType">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Type'| translate}} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.chargeCalculationType.value }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef> Amount </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Amount'| translate}} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.amount | money }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="chargeTimeType">
-      <th mat-header-cell *matHeaderCellDef> Collected On </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.chargeTimeType'| translate}} </th>
       <td mat-cell *matCellDef="let charge">
         {{ charge.chargeTimeType.value }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Actions'| translate}} </th>
       <td mat-cell *matCellDef="let charge">
         <button mat-icon-button color="warn" (click)="deleteCharge(charge)">
           <fa-icon icon="trash"></fa-icon>
@@ -63,11 +63,11 @@
   <mat-divider fxFlex="98%"></mat-divider>
 
   <div fxFlex="98%">
-    <h3 class="mat-h3">Overdue Charges</h3>
+    <h3 class="mat-h3">{{'Product_Component.LoanProduct.LoanStepper.Charges.OverdueCharges'| translate}}</h3>
   </div>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Overdue Charge</mat-label>
+    <mat-label>{{'Product_Component.LoanProduct.LoanStepper.Charges.OverdueCharge'| translate}}</mat-label>
     <mat-select #overdueCharge>
       <mat-option *ngFor="let overdueCharge of overdueChargeData | chargesFilter:chargesDataSource:currencyCode.value" [value]="overdueCharge">
         {{ overdueCharge.name }}
@@ -78,42 +78,42 @@
   <div fxFlex="48%" fxFlexAlign="center">
     <button type="button" mat-raised-button color="primary" (click)="addCharge(overdueCharge)" [disabled]="!overdueCharge.value">
       <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-      Add
+      {{'Product_Component.LoanProduct.LoanStepper.Charges.Add'| translate}}
     </button>
   </div>
 
  <table fxFlex="98%" class="mat-elevation-z1" mat-table [dataSource]="chargesDataSource | chargesPenaltyFilter:true" #overdueChargesTable [hidden]="overdueChargesTable.dataSource.length === 0">
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Name'| translate}} </th>
       <td mat-cell *matCellDef="let overdueCharge">
         {{ overdueCharge.name + ', ' + overdueCharge.currency.displaySymbol }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="chargeCalculationType">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Type'| translate}} </th>
       <td mat-cell *matCellDef="let overdueCharge">
         {{ overdueCharge.chargeCalculationType.value }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef> Amount </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Amount'| translate}} </th>
       <td mat-cell *matCellDef="let overdueCharge">
         {{ overdueCharge.amount | money }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="chargeTimeType">
-      <th mat-header-cell *matHeaderCellDef> Collected On </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.chargeTimeType'| translate}} </th>
       <td mat-cell *matCellDef="let overdueCharge">
         {{ overdueCharge.chargeTimeType.value }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.LoanProduct.LoanStepper.Charges.Actions'| translate}} </th>
       <td mat-cell *matCellDef="let overdueCharge">
         <button mat-icon-button color="warn" (click)="deleteCharge(overdueCharge)">
           <fa-icon icon="trash"></fa-icon>
@@ -131,10 +131,10 @@
 <div fxLayout="row" class="margin-t+" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
   <button mat-raised-button matStepperPrevious>
     <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-    Previous
+    {{ "ShareButton.PreviousEng" | translate }}
   </button>
   <button mat-raised-button matStepperNext>
-    Next&nbsp;&nbsp;
+    {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
     <fa-icon icon="arrow-right"></fa-icon>
   </button>
 </div>
