--- a/src/app/products/loan-products/loan-products.component.html
+++ b/src/app/products/loan-products/loan-products.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_LOANPRODUCT'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Loan Product
+    {{'Product_Component.LoanProduct.btnCreateLoanProduct'| translate}}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Product_Component.LoanProduct.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,22 +19,22 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.LoanProduct.Name'| translate}} </th>
         <td mat-cell *matCellDef="let loanProduct"> {{ loanProduct.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="shortName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Short Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.LoanProduct.shortName'| translate}} </th>
         <td mat-cell *matCellDef="let loanProduct"> {{ loanProduct.shortName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="closeDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Expiry Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.LoanProduct.closeDate'| translate}} </th>
         <td mat-cell *matCellDef="let loanProduct"> {{ loanProduct.closeDate | date }} </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.LoanProduct.Status'| translate}} </th>
         <td mat-cell *matCellDef="let loanProduct">
           <div [className]="loanProduct.status | statusLookup">
             <fa-icon matTooltip="{{ loanProduct.status === 'loanProduct.active' ? 'Active' : 'Inactive' }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
