--- a/src/app/products/manage-tax-components/create-tax-component/create-tax-component.component.html
+++ b/src/app/products/manage-tax-components/create-tax-component/create-tax-component.component.html
@@ -9,27 +9,29 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Create.Name'| translate}}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="taxComponentForm.controls.name.hasError('required')">
-              Name is <strong>required</strong>
+              {{'Product_Component.ManageTax.Create.errName'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Percentage</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Create.Percentage'| translate}}</mat-label>
             <input type="number" matInput required formControlName="percentage">
             <mat-error *ngIf="taxComponentForm.controls.percentage.hasError('required')">
-              Percentage is <strong>required</strong>
+              {{'Product_Component.ManageTax.Create.errPercentage'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
             <mat-error *ngIf="taxComponentForm.controls.percentage.hasError('pattern') ||
             taxComponentForm.controls.percentage.hasError('max')">
-              Percentage <strong>should</strong> be larger than 0 and at most 100
+            {{'Product_Component.ManageTax.Create.Percentage'| translate}}
+              <strong>{{'Product_Component.ManageTax.Create.should'| translate}}</strong>
+              {{'Product_Component.ManageTax.Create.alert'| translate}}
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Debit Account Type</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Create.debitAccountType'| translate}}</mat-label>
             <mat-select formControlName="debitAccountType">
               <mat-option *ngFor="let debitAccountType of debitAccountTypeData" [value]="debitAccountType.id">
                 {{ debitAccountType.value }}
@@ -38,19 +40,19 @@
           </mat-form-field>
 
           <mat-form-field *ngIf="taxComponentForm.controls.debitAccountType.value">
-            <mat-label>Debit Account</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Create.debitAcountId'| translate}}</mat-label>
             <mat-select required formControlName="debitAcountId">
               <mat-option *ngFor="let debitAccount of debitAccountData" [value]="debitAccount.id">
                 {{ debitAccount.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="taxComponentForm.controls.debitAcountId.hasError('required')">
-              Debit account is <strong>required</strong>
+              {{'Product_Component.ManageTax.Create.errdebitAcountId'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Credit Account Type</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Create.creditAccountType'| translate}}</mat-label>
             <mat-select formControlName="creditAccountType">
               <mat-option *ngFor="let creditAccountType of creditAccountTypeData" [value]="creditAccountType.id">
                 {{ creditAccountType.value }}
@@ -59,24 +61,24 @@
           </mat-form-field>
 
           <mat-form-field *ngIf="taxComponentForm.controls.creditAccountType.value">
-            <mat-label>Credit Account</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Create.creditAcountId'| translate}}</mat-label>
             <mat-select required formControlName="creditAcountId">
               <mat-option *ngFor="let creditAccount of creditAccountData" [value]="creditAccount.id">
                 {{ creditAccount.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="taxComponentForm.controls.creditAcountId.hasError('required')">
-              Credit account is <strong>required</strong>
+              {{'Product_Component.ManageTax.Create.errcreditAcountId'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Start date</mat-label>
+          <mat-label>{{'Product_Component.ManageTax.Create.startDate'| translate}}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startDatePicker" required formControlName="startDate">
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
           <mat-error *ngIf="taxComponentForm.controls.startDate.hasError('required')">
-            Start date is <strong>required</strong>
+            {{'Product_Component.ManageTax.Create.errstartDate'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
           </mat-error>
         </mat-form-field>
 
@@ -85,8 +87,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!taxComponentForm.valid" *midasHasPermission="'CREATE_TAXCOMPONENT'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!taxComponentForm.valid" *midasHasPermission="'CREATE_TAXCOMPONENT'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
