--- a/src/app/products/manage-tax-components/edit-tax-component/edit-tax-component.component.html
+++ b/src/app/products/manage-tax-components/edit-tax-component/edit-tax-component.component.html
@@ -9,38 +9,38 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Edit.Name'| translate}}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="taxComponentForm.controls.name.hasError('required')">
-              Name is <strong>required</strong>
+              {{'Product_Component.ManageTax.Edit.errName'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Percentage</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Edit.Percentage'| translate}}</mat-label>
             <input matInput required formControlName="percentage">
             <mat-error *ngIf="taxComponentForm.controls.name.hasError('required')">
-              Percentage is <strong>required</strong>
+              {{'Product_Component.ManageTax.Edit.Name'| translate}}Percentage is <strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
-          </mat-form-field>    
+          </mat-form-field>
 
           <mat-form-field *ngIf="taxComponentData.creditAccountType.value">
-            <mat-label>Credit Account Type</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Edit.creditAccountType'| translate}}</mat-label>
             <input matInput formControlName="creditAccountType">
-          </mat-form-field> 
+          </mat-form-field>
 
           <mat-form-field *ngIf="taxComponentData.creditAccount.name">
-            <mat-label>Credit Account</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Edit.creditAccount'| translate}}</mat-label>
             <input matInput formControlName="creditAccount">
-          </mat-form-field> 
-        
+          </mat-form-field>
+
           <mat-form-field>
-            <mat-label>Start Date</mat-label>
+            <mat-label>{{'Product_Component.ManageTax.Edit.startDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [matDatepicker]="startDatePicker" required formControlName="startDate">
             <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #startDatePicker></mat-datepicker>
             <mat-error *ngIf="taxComponentForm.controls.startDate.hasError('required')">
-              Start Date is <strong>required</strong>
+              {{'Product_Component.ManageTax.Edit.errstartDate'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -49,8 +49,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!taxComponentForm.valid" *midasHasPermission="'UPDATE_TAXCOMPONENT'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!taxComponentForm.valid" *midasHasPermission="'UPDATE_TAXCOMPONENT'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
