--- a/src/app/products/manage-tax-groups/edit-tax-group/edit-tax-group.component.html
+++ b/src/app/products/manage-tax-groups/edit-tax-group/edit-tax-group.component.html
@@ -9,44 +9,44 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="100%">
-            <mat-label>Name</mat-label>
+            <mat-label>{{'Product_Component.ManageTaxGroups.Edit.Name'| translate}}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="taxGroupForm.controls.name.hasError('required')">
-              Name is <strong>required</strong>
+              {{'Product_Component.ManageTaxGroups.Edit.errName'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
-          <h3 fxFlex="40%" class="mat-h3">Tax Components</h3>
+          <h3 fxFlex="40%" class="mat-h3">{{'Product_Component.ManageTaxGroups.Edit.TaxComponents'| translate}}</h3>
 
           <div fxFlex="40%" fxLayout="row" fxLayoutAlign="start center">
             <button type="button" mat-raised-button color="primary" (click)="addTaxGroup()">
               <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-              Add
+              {{ "ShareButton.AddEng" | translate }}
             </button>
           </div>
 
           <table mat-table [dataSource]="taxComponentsDataSource" [hidden]="taxComponentsDataSource.length === 0">
 
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ManageTaxGroups.Edit.Name'| translate}} </th>
               <td mat-cell *matCellDef="let taxComponent">
                 {{ taxComponent.taxComponentId | find: taxComponentOptions:'id':'name'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="startDate">
-              <th mat-header-cell *matHeaderCellDef> Start Date </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ManageTaxGroups.Edit.startDate'| translate}} </th>
               <td mat-cell *matCellDef="let taxComponent"> {{ taxComponent.startDate | date }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="endDate">
-              <th mat-header-cell *matHeaderCellDef> End Date </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ManageTaxGroups.Edit.endDate'| translate}} </th>
               <td mat-cell *matCellDef="let taxComponent"> {{ taxComponent.endDate ? (taxComponent.endDate | date) : '' }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef> Actions </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ManageTaxGroups.Edit.Actions'| translate}} </th>
               <td mat-cell *matCellDef="let taxComponent; let taxComponentIndex = index">
                 <button type="button" mat-icon-button color="primary" (click)="editTaxGroup(taxComponent, taxComponentIndex)"
                   matTooltip="Edit" matTooltipPosition="left">
@@ -70,8 +70,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!taxGroupForm.valid" *midasHasPermission="'UPDATE_TAXGROUP'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!taxGroupForm.valid" *midasHasPermission="'UPDATE_TAXGROUP'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
