--- a/src/app/products/manage-tax-groups/manage-tax-groups.component.html
+++ b/src/app/products/manage-tax-groups/manage-tax-groups.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_TAXGROUP'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Tax Groups
+    {{'Product_Component.ManageTaxGroups.btnCreateTaxGroups'| translate}}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Product_Component.ManageTaxGroups.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,7 +19,7 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ManageTaxGroups.Name'| translate}} </th>
         <td mat-cell *matCellDef="let taxGroups"> {{ taxGroups.name }} </td>
       </ng-container>
 
