--- a/src/app/products/products-mix/create-product-mix/create-product-mix.component.html
+++ b/src/app/products/products-mix/create-product-mix/create-product-mix.component.html
@@ -9,26 +9,27 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Product</mat-label>
+            <mat-label>{{'Product_Component.ProductsMix.Create.Product'| translate}}</mat-label>
             <mat-select required formControlName="productId">
               <mat-option *ngFor="let productOption of productOptionData" [value]="productOption.id">
                 {{ productOption.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="productMixForm.controls.productId.hasError('required')">
-              Product is <strong>required</strong>
+              {{'Product_Component.ProductsMix.Create.errProduct'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="productData">
-            <mat-label>Restricted products</mat-label>
+            <mat-label>{{'Product_Component.ProductsMix.Create.restrictedProducts'| translate}}</mat-label>
             <mat-select required formControlName="restrictedProducts" multiple>
               <mat-option *ngFor="let product of productData" [value]="product.id">
                 {{ product.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="productMixForm.controls.restrictedProducts.hasError('required')" >
-              At least one restricted product <strong>must be selected</strong>
+              {{'Product_Component.ProductsMix.Create.errrestrictedProducts'| translate}}
+              <strong>{{'Product_Component.ProductsMix.Create.warn'| translate}}</strong>
             </mat-error>
           </mat-form-field>
         </div>
@@ -36,8 +37,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!productMixForm.valid" *midasHasPermission="'CREATE_PRODUCTMIX'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!productMixForm.valid" *midasHasPermission="'CREATE_PRODUCTMIX'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
