--- a/src/app/products/products-mix/products-mix.component.html
+++ b/src/app/products/products-mix/products-mix.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="end" class="container m-b-20">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_PRODUCTMIX'">
-    <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Add
+    <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.AddEng" | translate }}
   </button>
 </div>
 
@@ -8,7 +8,7 @@
 
    <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Product_Component.ProductsMix.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -18,7 +18,7 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="productName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ProductsMix.productName'| translate}} </th>
         <td mat-cell *matCellDef="let productMix"> {{ productMix.productName }} </td>
       </ng-container>
 
