--- a/src/app/products/recurring-deposit-products/recurring-deposit-product-stepper/recurring-deposit-product-interest-rate-chart-step/recurring-deposit-product-interest-rate-chart-step.component.html
+++ b/src/app/products/recurring-deposit-products/recurring-deposit-product-stepper/recurring-deposit-product-interest-rate-chart-step/recurring-deposit-product-interest-rate-chart-step.component.html
@@ -2,12 +2,12 @@
 
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
-    <h3 fxFlex="13%" class="mat-h3">Interest Rate Charts</h3>
+    <h3 fxFlex="13%" class="mat-h3">{{'Product_Component.RecuringDeposit.Stepper.InterestRate.InterestRateCharts'| translate}}</h3>
 
     <div fxFlex="83%" fxLayout="row" fxLayoutAlign="start center">
       <button type="button" mat-raised-button color="primary" (click)="addChart()">
         <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-        Add
+        {{ "ShareButton.AddEng" | translate }}
       </button>
     </div>
 
@@ -24,74 +24,74 @@
         </div>
 
         <mat-form-field fxFlex="32%">
-          <mat-label>Name</mat-label>
+          <mat-label>{{'Product_Component.RecuringDeposit.Stepper.InterestRate.Name'| translate}}</mat-label>
           <input matInput formControlName="name">
         </mat-form-field>
 
         <mat-form-field fxFlex="31%">
-          <mat-label>Valid from Date</mat-label>
+          <mat-label>{{'Product_Component.RecuringDeposit.Stepper.InterestRate.fromDate'| translate}}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="validFromDatePicker" formControlName="fromDate" required>
           <mat-datepicker-toggle matSuffix [for]="validFromDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #validFromDatePicker></mat-datepicker>
           <mat-error>
-            Valid from Date is <strong>required</strong>
+            {{'Product_Component.RecuringDeposit.Stepper.InterestRate.errfromDate'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
           </mat-error>
         </mat-form-field>
 
         <mat-form-field fxFlex="31%">
-          <mat-label>End Date</mat-label>
+          <mat-label>{{'Product_Component.RecuringDeposit.Stepper.InterestRate.endDate'| translate}}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="endDatePicker" formControlName="endDate">
           <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #endDatePicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field fxFlex="65%">
-          <mat-label>Description</mat-label>
+          <mat-label>{{'Product_Component.RecuringDeposit.Stepper.InterestRate.Description'| translate}}</mat-label>
           <textarea matInput formControlName="description"></textarea>
         </mat-form-field>
 
         <div fxFlex="31%" fxLayout="row" fxLayoutAlign="space-between center">
           <mat-checkbox labelPosition="before" formControlName="isPrimaryGroupingByAmount">
-            Is primary grouping by amount?
+            {{'Product_Component.RecuringDeposit.Stepper.InterestRate.isPrimaryGroupingByAmount'| translate}}
           </mat-checkbox>
           <button type="button" mat-raised-button color="primary" (click)="addChartSlab(chart.controls.chartSlabs)">
             <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-            Add Slab
+            {{'Product_Component.RecuringDeposit.Stepper.InterestRate.btnAddSlab'| translate}}
           </button>
         </div>
 
         <table fxFlex="98%" class="mat-elevation-z1" mat-table [dataSource]="chart.value.chartSlabs" *ngIf="chart.value.chartSlabs.length !== 0" multiTemplateDataRows>
 
           <ng-container matColumnDef="period">
-            <th mat-header-cell *matHeaderCellDef> Period </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.Period'| translate}} </th>
             <td mat-cell *matCellDef="let chartSlab">
               {{ chartSlab.fromPeriod + ' - ' + chartSlab.toPeriod + ' ' + (chartSlab.periodType | find:periodTypeData:'id':'value') }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="amountRange">
-            <th mat-header-cell *matHeaderCellDef> Amount Range </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.amountRange'| translate}} </th>
             <td mat-cell *matCellDef="let chartSlab">
               {{ chartSlab.amountRangeFrom + ' - ' + chartSlab.amountRangeTo }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="annualInterestRate">
-            <th mat-header-cell *matHeaderCellDef> Interest </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.Interest'| translate}} </th>
             <td mat-cell *matCellDef="let chartSlab">
               {{ chartSlab.annualInterestRate }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.Description'| translate}} </th>
             <td mat-cell *matCellDef="let chartSlab">
               {{ chartSlab.description }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.Actions'| translate}} </th>
             <td mat-cell *matCellDef="let chartSlab; let chartSlabIndex = dataIndex">
               <button mat-icon-button color="primary" (click)="editChartSlab(chart.controls.chartSlabs, chartSlabIndex)">
                 <fa-icon icon="edit"></fa-icon>
@@ -102,11 +102,11 @@
               <button mat-button color="primary" (click)="expandChartSlabIndex[chartIndex] = expandChartSlabIndex[chartIndex] === chartSlabIndex ? null : chartSlabIndex">
                 <span *ngIf="expandChartSlabIndex[chartIndex] !== chartSlabIndex">
                   <fa-icon icon="eye"></fa-icon>&nbsp;&nbsp;
-                  View Incentives
+                  {{'Product_Component.RecuringDeposit.Stepper.InterestRate.ViewIncentives'| translate}}
                 </span>
                 <span *ngIf="expandChartSlabIndex[chartIndex] === chartSlabIndex">
                   <fa-icon icon="eye-slash"></fa-icon>&nbsp;&nbsp;
-                  Hide Incentives
+                  {{'Product_Component.RecuringDeposit.Stepper.InterestRate.HideIncentives'| translate}}
                 </span>
               </button>
             </td>
@@ -120,41 +120,41 @@
                 <mat-card fxLayout="row wrap" fxFlexFill>
 
                   <h4 class="mat-h4" fxFlex="13%">
-                    Incentives
+                    {{'Product_Component.RecuringDeposit.Stepper.InterestRate.Incentives'| translate}}
                   </h4>
 
                   <div fxFlex="83%">
                     <button mat-raised-button color="primary" (click)="addIncentive(getIncentives(chart.controls.chartSlabs, chartSlabIndex))">
                       <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-                      Add
+                      {{ "ShareButton.AddEng" | translate }}
                     </button>
                   </div>
 
                   <table fxFlexFill class="mat-elevation-z1" mat-table [dataSource]="chartSlab.incentives" *ngIf="chartSlab.incentives.length">
 
                     <ng-container matColumnDef="entityType">
-                      <th mat-header-cell *matHeaderCellDef> Entity Type </th>
+                      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.entityType'| translate}} </th>
                       <td mat-cell *matCellDef="let incentive">
                         {{ incentive.entityType | find:entityTypeData:'id':'value' }}
                       </td>
                     </ng-container>
 
                     <ng-container matColumnDef="attributeName">
-                      <th mat-header-cell *matHeaderCellDef> Attribute Name </th>
+                      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.attributeName'| translate}} </th>
                       <td mat-cell *matCellDef="let incentive">
                         {{ incentive.attributeName | find:attributeNameData:'id':'value' }}
                       </td>
                     </ng-container>
 
                     <ng-container matColumnDef="conditionType">
-                      <th mat-header-cell *matHeaderCellDef> Condition Type </th>
+                      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.conditionType'| translate}} </th>
                       <td mat-cell *matCellDef="let incentive">
                         {{ incentive.conditionType | find:conditionTypeData:'id':'value' }}
                       </td>
                     </ng-container>
 
                     <ng-container matColumnDef="attributeValue">
-                      <th mat-header-cell *matHeaderCellDef> Attribute Value </th>
+                      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.attributeValue'| translate}} </th>
                       <td mat-cell *matCellDef="let incentive" [ngSwitch]="incentive.attributeName">
                         <span *ngSwitchCase="2">{{ incentive.attributeValue | find:genderData:'id':'name' }}</span>
                         <span *ngSwitchCase="3">{{ incentive.attributeValue }}</span>
@@ -164,21 +164,21 @@
                     </ng-container>
 
                     <ng-container matColumnDef="incentiveType">
-                      <th mat-header-cell *matHeaderCellDef> Incentive Type </th>
+                      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.incentiveType'| translate}} </th>
                       <td mat-cell *matCellDef="let incentive">
                         {{ incentive.incentiveType | find:incentiveTypeData:'id':'value'}}
                       </td>
                     </ng-container>
 
                     <ng-container matColumnDef="amount">
-                      <th mat-header-cell *matHeaderCellDef> Interest </th>
+                      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.Interest'| translate}} </th>
                       <td mat-cell *matCellDef="let incentive">
                         {{ incentive.amount | money }}
                       </td>
                     </ng-container>
 
                     <ng-container matColumnDef="actions">
-                      <th mat-header-cell *matHeaderCellDef> Actions </th>
+                      <th mat-header-cell *matHeaderCellDef> {{'Product_Component.RecuringDeposit.Stepper.InterestRate.Actions'| translate}} </th>
                       <td mat-cell *matCellDef="let incentive; let incentiveIndex = index">
                         <button mat-icon-button color="primary" (click)="editIncentive(getIncentives(chart.controls.chartSlabs, chartSlabIndex), incentiveIndex)">
                           <fa-icon icon="edit"></fa-icon>
@@ -214,10 +214,10 @@
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
     <button mat-raised-button matStepperPrevious disabled>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext>
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
