--- a/src/app/products/share-products/dividends-share-product/dividends.component.html
+++ b/src/app/products/share-products/dividends-share-product/dividends.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
     <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_SHAREDIVIDEND'">
       <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-      Initiate Dividend
+      {{'Product_Component.ShareProducts.Dividends.btnInitiateDividend'| translate}}
     </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.Dividends.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,27 +19,27 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.Dividends.Name'| translate}} </th>
         <td mat-cell *matCellDef="let dividend">{{ dividend.productData.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="dividendPeriodStartDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Dividend Period Start Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.Dividends.dividendPeriodStartDate'| translate}} </th>
         <td mat-cell *matCellDef="let dividend">{{ dividend.dividendPeriodStartDate | date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="dividendPeriodEndDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Dividend Period End Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.Dividends.dividendPeriodEndDate'| translate}} </th>
         <td mat-cell *matCellDef="let dividend">{{ dividend.dividendPeriodEndDate | date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.Dividends.Amount'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{ dividend.amount | money }}</td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.Dividends.Status'| translate}} </th>
         <td mat-cell *matCellDef="let dividend">{{ dividend.status.value }}</td>
       </ng-container>
 
