--- a/src/app/products/share-products/share-product-stepper/share-product-accounting-step/share-product-accounting-step.component.html
+++ b/src/app/products/share-products/share-product-stepper/share-product-accounting-step/share-product-accounting-step.component.html
@@ -15,62 +15,62 @@
       <h4 fxFlex="98%" class="mat-h4">Assets</h4>
 
       <mat-form-field fxFlex="48%">
-        <mat-label>Share reference</mat-label>
+        <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Accounting.shareReferenceId'| translate}}</mat-label>
         <mat-select formControlName="shareReferenceId" required>
           <mat-option *ngFor="let assetAccount of assetAccountData" [value]="assetAccount.id">
             {{ assetAccount.name }}
           </mat-option>
         </mat-select>
         <mat-error>
-          Share reference is <strong>required</strong>
+          {{'Product_Component.ShareProducts.ShareStepper.Accounting.errshareReferenceId'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-divider fxFlex="98%"></mat-divider>
 
-      <h4 fxFlex="98%" class="mat-h4">Liabilities</h4>
+      <h4 fxFlex="98%" class="mat-h4">{{'Product_Component.ShareProducts.ShareStepper.Accounting.Liabilities'| translate}}</h4>
 
       <mat-form-field fxFlex="48%">
-        <mat-label>Share suspense control</mat-label>
+        <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Accounting.shareSuspenseId'| translate}}</mat-label>
         <mat-select formControlName="shareSuspenseId" required>
           <mat-option *ngFor="let liabilityAccount of liabilityAccountData" [value]="liabilityAccount.id">
             {{ liabilityAccount.name }}
           </mat-option>
         </mat-select>
         <mat-error>
-          Share suspense control is <strong>required</strong>
+          {{'Product_Component.ShareProducts.ShareStepper.Accounting.errshareSuspenseId'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-divider fxFlex="98%"></mat-divider>
 
-      <h4 fxFlex="98%" class="mat-h4">Share Equity</h4>
+      <h4 fxFlex="98%" class="mat-h4">{{'Product_Component.ShareProducts.ShareStepper.Accounting.ShareEquity'| translate}}</h4>
 
       <mat-form-field fxFlex="48%">
-        <mat-label>Equity</mat-label>
+        <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Accounting.Equity'| translate}}</mat-label>
         <mat-select formControlName="shareEquityId" required>
           <mat-option *ngFor="let equityAccount of equityAccountData" [value]="equityAccount.id">
             {{ equityAccount.name }}
           </mat-option>
         </mat-select>
         <mat-error>
-          Equity is <strong>required</strong>
+          {{'Product_Component.ShareProducts.ShareStepper.Accounting.errEquity'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-divider fxFlex="98%"></mat-divider>
 
-      <h4 fxFlex="98%" class="mat-h4">Income</h4>
+      <h4 fxFlex="98%" class="mat-h4">{{'Product_Component.ShareProducts.ShareStepper.Accounting.Income'| translate}}</h4>
 
       <mat-form-field fxFlex="48%">
-        <mat-label>Income from fees</mat-label>
+        <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Accounting.IncomeFromFees'| translate}}</mat-label>
         <mat-select formControlName="incomeFromFeeAccountId" required>
           <mat-option *ngFor="let incomeAccount of incomeAccountData" [value]="incomeAccount.id">
             {{ incomeAccount.name }}
           </mat-option>
         </mat-select>
         <mat-error>
-          Income from fees is <strong>required</strong>
+          {{'Product_Component.ShareProducts.ShareStepper.Accounting.errIncomeFromFees'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
@@ -81,10 +81,10 @@
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
     <button mat-raised-button matStepperPrevious>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext [disabled]="!shareProductFormValid">
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
