--- a/src/app/products/share-products/share-product-stepper/share-product-settings-step/share-product-settings-step.component.html
+++ b/src/app/products/share-products/share-product-stepper/share-product-settings-step/share-product-settings-step.component.html
@@ -2,35 +2,35 @@
 
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
-    <h4 fxFlex="98%" class="mat-h4">Shares per Client</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{'Product_Component.ShareProducts.ShareStepper.Setting.SharesPerClient'| translate}}</h4>
 
     <mat-form-field fxFlex="31%">
-      <mat-label>Minimum</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Setting.Minimum'| translate}}</mat-label>
       <input type="number" matInput formControlName="minimumShares">
     </mat-form-field>
 
     <mat-form-field fxFlex="31%">
-      <mat-label>Default</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Setting.Default'| translate}}</mat-label>
       <input type="number" matInput formControlName="nominalShares" required>
       <mat-error>
-        Default Shares per Client is <strong>required</strong>
+        {{'Product_Component.ShareProducts.ShareStepper.Setting.errDefault'| translate}}<strong>{{'Product_Component.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="31%">
-      <mat-label>Maximum</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Setting.Maximum'| translate}}</mat-label>
       <input type="number" matInput formControlName="maximumShares">
     </mat-form-field>
 
-    <h4 fxFlex="98%" class="mat-h4">Minimum Active Period</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{'Product_Component.ShareProducts.ShareStepper.Setting.MinimumActivePeriod'| translate}}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Setting.Frequency'| translate}}</mat-label>
       <input type="number" matInput formControlName="minimumActivePeriodForDividends">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Setting.Type'| translate}}</mat-label>
       <mat-select formControlName="minimumactiveperiodFrequencyType">
         <mat-option *ngFor="let minimumActivePeriodFrequencyType of minimumActivePeriodFrequencyTypeData" [value]="minimumActivePeriodFrequencyType.id">
           {{ minimumActivePeriodFrequencyType.value }}
@@ -38,15 +38,15 @@
       </mat-select>
     </mat-form-field>
 
-    <h4 fxFlex="98%" class="mat-h4">Lock-in Period</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{'Product_Component.ShareProducts.ShareStepper.Setting.LockInPeriod'| translate}}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Setting.Frequency'| translate}}</mat-label>
       <input type="number" matInput formControlName="lockinPeriodFrequency">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.ShareStepper.Setting.Type'| translate}}</mat-label>
       <mat-select formControlName="lockinPeriodFrequencyType">
         <mat-option *ngFor="let lockinPeriodFrequencyType of lockinPeriodFrequencyTypeData" [value]="lockinPeriodFrequencyType.id">
           {{ lockinPeriodFrequencyType.value }}
@@ -55,7 +55,7 @@
     </mat-form-field>
 
     <mat-checkbox fxFlex="98%" class="margin-v" labelPosition="before" formControlName="allowDividendCalculationForInactiveClients">
-      Allow dividends for inactive clients
+      {{'Product_Component.ShareProducts.ShareStepper.Setting.allowDividendCalculationForInactiveClients'| translate}}
     </mat-checkbox>
 
   </div>
@@ -63,10 +63,10 @@
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
     <button mat-raised-button matStepperPrevious>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext>
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
