--- a/src/app/products/share-products/view-dividend/view-dividend.component.html
+++ b/src/app/products/share-products/view-dividend/view-dividend.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px" *ngIf="!isdividendPosted">
   <button mat-raised-button color="primary" *midasHasPermission='"POST_DIVIDENDS"' (click)="postDividends()">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Post Dividend
+    {{'Product_Component.ShareProducts.View.btnPostDividend'| translate}}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Product_Component.ShareProducts.View.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,22 +19,22 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="clientName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Client Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.View.clientName'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{ dividend.accountData.clientName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="shareAccount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Share Account </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.View.shareAccount'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{ dividend.accountData.accountNo }} </td>
       </ng-container>
 
       <ng-container matColumnDef="dividendAmount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Dividend Amount </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.View.dividendAmount'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{ dividend.amount | money }} </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Product_Component.ShareProducts.View.Status'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{ dividend.status.value }} </td>
       </ng-container>
 
