--- a/src/app/products/share-products/view-share-product/view-share-product.component.html
+++ b/src/app/products/share-products/view-share-product/view-share-product.component.html
@@ -1,11 +1,11 @@
 <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_SHAREPRODUCT'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{'Product_Component.ShareProducts.ViewShare.btnEdit'| translate}}
   </button>
   <button mat-raised-button color="primary" [routerLink]="['dividends']" *midasHasPermission="'UPDATE_SHAREPRODUCT'">
     <fa-icon icon="hand-holding-usd"></fa-icon>&nbsp;&nbsp;
-    Dividends
+    {{'Product_Component.ShareProducts.ViewShare.btnDividends'| translate}}
   </button>
 </div>
 
@@ -21,104 +21,104 @@
 
         <mat-divider [inset]="true"></mat-divider>
 
-        <h3 class="mat-h3" fxFlexFill>Details</h3>
+        <h3 class="mat-h3" fxFlexFill>{{'Product_Component.ShareProducts.ViewShare.Details'| translate}}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Short Name:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.shortName'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.shortName }}</span>
         </div>
 
         <div fxFlexFill *ngIf="shareProduct.description">
-          <span fxFlex="40%">Description:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.description'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.description }}</span>
         </div>
 
-        <h3 class="mat-h3" fxFlexFill>Currency</h3>
+        <h3 class="mat-h3" fxFlexFill>{{'Product_Component.ShareProducts.ViewShare.Currency'| translate}}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Currency:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.currency'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.currency.name }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Decimal Places:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.decimalPlaces'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.currency.decimalPlaces }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Currency in multiples of:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.inMultiplesOf'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.currency.inMultiplesOf }}</span>
         </div>
 
-        <h3 class="mat-h3" fxFlexFill>Terms</h3>
+        <h3 class="mat-h3" fxFlexFill>{{'Product_Component.ShareProducts.ViewShare.Terms'| translate}}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Total Number of Shares:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.totalShares'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.totalShares }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Shares to be Issued:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.totalSharesIssued'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.totalSharesIssued }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Nominal/Unit Price:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.unitPrice'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.unitPrice }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Capital Value:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.shareCapital'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.shareCapital }}</span>
         </div>
 
-        <h3 class="mat-h3" fxFlexFill>Settings</h3>
+        <h3 class="mat-h3" fxFlexFill>{{'Product_Component.ShareProducts.ViewShare.Settings'| translate}}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Shares per Client:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.nominalShares'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.nominalShares + ' (Min: ' + (shareProduct.minimumShares ? shareProduct.minimumShares : shareProduct.nominalShares) + ', Max: ' + (shareProduct.maximumShares ? shareProduct.maximumShares : shareProduct.nominalShares) + ')' }}</span>
         </div>
 
         <div fxFlexFill *ngIf="shareProduct.minimumActivePeriod">
-          <span fxFlex="40%">Minimum Active Period:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.minimumActivePeriod'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.minimumActivePeriod + ' ' + shareProduct.minimumActivePeriodForDividendsTypeEnum.value }}</span>
         </div>
 
         <div fxFlexFill *ngIf="shareProduct.lockinPeriod">
-          <span fxFlex="40%">Lock-in Period:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.lockinPeriod'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.lockinPeriod + ' ' + shareProduct.lockPeriodTypeEnum.value }}</span>
         </div>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Allow dividends for inactive clients:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.allowDividendCalculationForInactiveClients'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.allowDividendCalculationForInactiveClients ? 'Yes' : 'No' }}</span>
         </div>
 
         <div fxFlexFill *ngIf="shareProduct.marketPrice?.length" fxLayout="row wrap" fxLayout.lt-md="column">
 
-          <h3 class="mat-h3" fxFlexFill>Market Price Periods</h3>
+          <h3 class="mat-h3" fxFlexFill>{{'Product_Component.ShareProducts.ViewShare.MarketPricePeriods'| translate}}</h3>
 
           <mat-divider [inset]="true"></mat-divider>
 
           <table fxFlexFill class="mat-elevation-z1" mat-table [dataSource]="shareProduct.marketPrice">
 
             <ng-container matColumnDef="fromDate">
-              <th mat-header-cell *matHeaderCellDef> From Date </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ShareProducts.ViewShare.fromDate'| translate}} </th>
               <td mat-cell *matCellDef="let marketPrice">
                 {{ marketPrice.fromDate | date }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="shareValue">
-              <th mat-header-cell *matHeaderCellDef> Nominal/Unit Price </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ShareProducts.ViewShare.shareValue'| translate}} </th>
               <td mat-cell *matCellDef="let marketPrice">
                 {{ marketPrice.shareValue }}
               </td>
@@ -133,35 +133,35 @@
 
         <div fxFlexFill *ngIf="shareProduct.charges.length" fxLayout="row wrap" fxLayout.lt-md="column">
 
-          <h3 class="mat-h3" fxFlexFill>Charges</h3>
+          <h3 class="mat-h3" fxFlexFill>{{'Product_Component.ShareProducts.ViewShare.Charges'| translate}}</h3>
 
           <mat-divider [inset]="true"></mat-divider>
 
           <table fxFlexFill class="mat-elevation-z1" mat-table [dataSource]="shareProduct.charges">
 
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ShareProducts.ViewShare.Name'| translate}} </th>
               <td mat-cell *matCellDef="let charge">
                 {{ charge.name + ', ' + charge.currency.displaySymbol }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="chargeCalculationType">
-              <th mat-header-cell *matHeaderCellDef> Type </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ShareProducts.ViewShare.Type'| translate}} </th>
               <td mat-cell *matCellDef="let charge">
                 {{ charge.chargeCalculationType.value }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="amount">
-              <th mat-header-cell *matHeaderCellDef> Amount </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ShareProducts.ViewShare.Amount'| translate}} </th>
               <td mat-cell *matCellDef="let charge">
                 {{ charge.amount | money }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="chargeTimeType">
-              <th mat-header-cell *matHeaderCellDef> Collected On </th>
+              <th mat-header-cell *matHeaderCellDef> {{'Product_Component.ShareProducts.ViewShare.chargeTimeType'| translate}} </th>
               <td mat-cell *matCellDef="let charge">
                 {{ charge.chargeTimeType.value }}
               </td>
@@ -174,42 +174,42 @@
 
         </div>
 
-        <h3 class="mat-h3" fxFlexFill>Accounting</h3>
+        <h3 class="mat-h3" fxFlexFill>{{'Product_Component.ShareProducts.ViewShare.Accounting'| translate}}</h3>
 
         <mat-divider [inset]="true"></mat-divider>
 
         <div fxFlexFill>
-          <span fxFlex="40%">Type:</span>
+          <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.accountingRule'| translate}}</span>
           <span fxFlex="60%">{{ shareProduct.accountingRule.value }}</span>
         </div>
 
         <div fxFlexFill *ngIf="shareProduct.accountingRule.id === 2" fxLayout="row wrap" fxLayout.lt-md="column">
 
-          <h4 fxFlexFill class="mat-h4">Assets</h4>
+          <h4 fxFlexFill class="mat-h4">{{'Product_Component.ShareProducts.ViewShare.Assets'| translate}}</h4>
 
           <div fxFlexFill>
-            <span fxFlex="40%">Share reference:</span>
+            <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.shareReferenceId'| translate}}</span>
             <span fxFlex="60%">{{ shareProduct.accountingMappings.shareReferenceId.name }}</span>
           </div>
 
-          <h4 fxFlexFill class="mat-h4">Liabilities</h4>
+          <h4 fxFlexFill class="mat-h4">{{'Product_Component.ShareProducts.ViewShare.Liabilities'| translate}}</h4>
 
           <div fxFlexFill>
-            <span fxFlex="40%">Share suspense control:</span>
+            <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.shareSuspenseId'| translate}}</span>
             <span fxFlex="60%">{{ shareProduct.accountingMappings.shareSuspenseId.name }}</span>
           </div>
 
-          <h4 fxFlexFill class="mat-h4">Share Equity</h4>
+          <h4 fxFlexFill class="mat-h4">{{'Product_Component.ShareProducts.ViewShare.ShareEquity'| translate}}</h4>
 
           <div fxFlexFill>
             <span fxFlex="40%">Equity:</span>
             <span fxFlex="60%">{{ shareProduct.accountingMappings.shareEquityId.name }}</span>
           </div>
 
-          <h4 fxFlexFill class="mat-h4">Income</h4>
+          <h4 fxFlexFill class="mat-h4">{{'Product_Component.ShareProducts.ViewShare.Income'| translate}}</h4>
 
           <div fxFlexFill>
-            <span fxFlex="40%">Income from fees:</span>
+            <span fxFlex="40%">{{'Product_Component.ShareProducts.ViewShare.IncomeFromFees'| translate}}</span>
             <span fxFlex="60%">{{ shareProduct.accountingMappings.incomeFromFeeAccountId.name }}</span>
           </div>
 
